[gd_scene load_steps=21 format=3 uid="uid://b7kmqfstuuhfl"]

[ext_resource type="Script" uid="uid://cc1dov4n6rtdk" path="res://Scripts/battle_new.gd" id="1_odwnt"]
[ext_resource type="Script" uid="uid://7j4x13kquajl" path="res://Scenes/move_options.gd" id="2_muy5e"]
[ext_resource type="Texture2D" uid="uid://bdvq5b6vmm0af" path="res://Assets/UI/BattleMovesBox1.png" id="2_q8q32"]
[ext_resource type="Script" uid="uid://dvg22nhv03uaj" path="res://Scenes/battleparty.gd" id="3_yfa5f"]
[ext_resource type="Texture2D" uid="uid://btxpcfh65rfel" path="res://Assets/artlings/Ink_Fox.png" id="4_efi8x"]
[ext_resource type="Texture2D" uid="uid://joc03yotk75w" path="res://Assets/UI/MoveButton1.png" id="4_vop86"]
[ext_resource type="LabelSettings" uid="uid://dvs314swtpp3o" path="res://Assets/battle_new_title.tres" id="5_efi8x"]
[ext_resource type="Texture2D" uid="uid://b2kx86wlltube" path="res://Assets/UI/MoveButton2.png" id="5_q3wcu"]
[ext_resource type="Script" uid="uid://c0d7ljjcgv4fo" path="res://Scenes/prog_label.gd" id="6_kbnnx"]
[ext_resource type="Texture2D" uid="uid://bsudeagcmgbhq" path="res://Assets/UI/MoveButton3.png" id="6_n2lc0"]
[ext_resource type="Texture2D" uid="uid://dxglhopotfbre" path="res://Assets/UI/MoveButton4.png" id="7_11hy7"]
[ext_resource type="Texture2D" uid="uid://dp0wj3subbjr6" path="res://Assets/UI/BattleDescBox.png" id="7_r5ah5"]
[ext_resource type="Texture2D" uid="uid://b6l7fbb5po7c5" path="res://Assets/UI/BattleDescPlay.png" id="8_4uhy2"]
[ext_resource type="Texture2D" uid="uid://q8e7t11xdng6" path="res://Assets/UI/BattleDescPause.png" id="9_4uhy2"]

[sub_resource type="LabelSettings" id="LabelSettings_b3lj8"]
font_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_muy5e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efi8x"]
bg_color = Color(0.854624, 0.253347, 0.291867, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbnnx"]
bg_color = Color(0.278658, 0.498325, 0.784576, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_ksy4f"]
line_spacing = 4.0
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_efi8x"]
font_size = 20
font_color = Color(0, 0, 0, 1)
outline_size = 4

[node name="BattleNew" type="Node3D"]
script = ExtResource("1_odwnt")

[node name="EnemyMonSpawn" type="Marker3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2, 0, 0)

[node name="PlayerMonSpawn" type="Marker3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2, 0, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BattleMovesBox1" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(242, 576)
scale = Vector2(0.84, 0.84)
texture = ExtResource("2_q8q32")

[node name="MoveOptions" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -117.0
offset_right = 496.0
offset_bottom = -13.0
grow_vertical = 0
scale = Vector2(0.895613, 0.870834)
alignment = 1
script = ExtResource("2_muy5e")

[node name="Move1" type="TextureButton" parent="CanvasLayer/MoveOptions"]
layout_mode = 2
texture_normal = ExtResource("4_vop86")

[node name="Label" type="Label" parent="CanvasLayer/MoveOptions/Move1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "None"
label_settings = SubResource("LabelSettings_b3lj8")
horizontal_alignment = 1

[node name="Move2" type="TextureButton" parent="CanvasLayer/MoveOptions"]
layout_mode = 2
texture_normal = ExtResource("5_q3wcu")

[node name="Label" type="Label" parent="CanvasLayer/MoveOptions/Move2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "None"
label_settings = SubResource("LabelSettings_b3lj8")
horizontal_alignment = 1

[node name="Move3" type="TextureButton" parent="CanvasLayer/MoveOptions"]
layout_mode = 2
texture_normal = ExtResource("6_n2lc0")

[node name="Label" type="Label" parent="CanvasLayer/MoveOptions/Move3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "None"
label_settings = SubResource("LabelSettings_b3lj8")
horizontal_alignment = 1

[node name="Move4" type="TextureButton" parent="CanvasLayer/MoveOptions"]
layout_mode = 2
texture_normal = ExtResource("7_11hy7")

[node name="Label" type="Label" parent="CanvasLayer/MoveOptions/Move4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "None"
label_settings = SubResource("LabelSettings_b3lj8")
horizontal_alignment = 1

[node name="ChangeArtling" type="Button" parent="CanvasLayer"]
offset_left = 5.0
offset_top = 467.0
offset_right = 127.0
offset_bottom = 498.0
text = "Check Party"

[node name="PlayerHpBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 26.0
offset_top = 40.0
offset_right = 342.0
offset_bottom = 79.0

[node name="Label" type="Label" parent="CanvasLayer/PlayerHpBar"]
layout_mode = 0
offset_left = 2.0
offset_top = -24.0
offset_right = 314.0
offset_bottom = -1.0
text = "Player Artling"

[node name="EnemyHpBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -336.0
offset_top = 39.0
offset_right = -20.0
offset_bottom = 78.0
grow_horizontal = 0

[node name="Label" type="Label" parent="CanvasLayer/EnemyHpBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -308.0
offset_top = -24.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 0
text = "Enemy Artling"
horizontal_alignment = 2

[node name="Party" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_muy5e")
script = ExtResource("3_yfa5f")

[node name="BackButton" type="Button" parent="CanvasLayer/Party"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 88.0
offset_bottom = 64.0
text = "Back"

[node name="Artlings" type="Control" parent="CanvasLayer/Party"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Artling1" type="TextureButton" parent="CanvasLayer/Party/Artlings"]
layout_mode = 0
offset_left = 112.0
offset_top = 38.0
offset_right = 368.0
offset_bottom = 294.0
scale = Vector2(0.88, 0.88)
texture_normal = ExtResource("4_efi8x")
ignore_texture_size = true
stretch_mode = 0

[node name="Name" type="Label" parent="CanvasLayer/Party/Artlings/Artling1"]
layout_mode = 0
offset_top = -14.0
offset_right = 256.0
offset_bottom = 10.0
text = "NAME - LEVEL"
label_settings = ExtResource("5_efi8x")
horizontal_alignment = 1

[node name="HpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling1"]
layout_mode = 0
offset_left = 25.0
offset_top = 256.0
offset_right = 232.0
offset_bottom = 280.0
theme_override_styles/fill = SubResource("StyleBoxFlat_efi8x")
value = 50.0
show_percentage = false

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling1"]
layout_mode = 0
offset_left = 25.0
offset_top = 280.0
offset_right = 232.0
offset_bottom = 296.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kbnnx")
value = 50.0
show_percentage = false

[node name="Artling2" type="TextureButton" parent="CanvasLayer/Party/Artlings"]
layout_mode = 0
offset_left = 464.0
offset_top = 38.0
offset_right = 720.0
offset_bottom = 294.0
scale = Vector2(0.88, 0.88)
texture_normal = ExtResource("4_efi8x")
ignore_texture_size = true
stretch_mode = 0

[node name="Name" type="Label" parent="CanvasLayer/Party/Artlings/Artling2"]
layout_mode = 0
offset_top = -14.0
offset_right = 256.0
offset_bottom = 10.0
text = "NAME - LEVEL"
label_settings = ExtResource("5_efi8x")
horizontal_alignment = 1

[node name="HpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling2"]
layout_mode = 0
offset_left = 25.0
offset_top = 256.0
offset_right = 232.0
offset_bottom = 280.0
theme_override_styles/fill = SubResource("StyleBoxFlat_efi8x")
value = 50.0
show_percentage = false

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling2"]
layout_mode = 0
offset_left = 25.0
offset_top = 280.0
offset_right = 232.0
offset_bottom = 296.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kbnnx")
value = 50.0
show_percentage = false

[node name="Artling3" type="TextureButton" parent="CanvasLayer/Party/Artlings"]
layout_mode = 0
offset_left = 816.0
offset_top = 38.0
offset_right = 1072.0
offset_bottom = 294.0
scale = Vector2(0.88, 0.88)
texture_normal = ExtResource("4_efi8x")
ignore_texture_size = true
stretch_mode = 0

[node name="Name" type="Label" parent="CanvasLayer/Party/Artlings/Artling3"]
layout_mode = 0
offset_top = -14.0
offset_right = 256.0
offset_bottom = 10.0
text = "NAME - LEVEL"
label_settings = ExtResource("5_efi8x")
horizontal_alignment = 1

[node name="HpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling3"]
layout_mode = 0
offset_left = 25.0
offset_top = 256.0
offset_right = 232.0
offset_bottom = 280.0
theme_override_styles/fill = SubResource("StyleBoxFlat_efi8x")
value = 50.0
show_percentage = false

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling3"]
layout_mode = 0
offset_left = 25.0
offset_top = 280.0
offset_right = 232.0
offset_bottom = 296.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kbnnx")
value = 50.0
show_percentage = false

[node name="Artling4" type="TextureButton" parent="CanvasLayer/Party/Artlings"]
layout_mode = 0
offset_left = 112.0
offset_top = 352.0
offset_right = 368.0
offset_bottom = 608.0
scale = Vector2(0.88, 0.88)
texture_normal = ExtResource("4_efi8x")
ignore_texture_size = true
stretch_mode = 0

[node name="Name" type="Label" parent="CanvasLayer/Party/Artlings/Artling4"]
layout_mode = 0
offset_top = -14.0
offset_right = 256.0
offset_bottom = 10.0
text = "NAME - LEVEL"
label_settings = ExtResource("5_efi8x")
horizontal_alignment = 1

[node name="HpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling4"]
layout_mode = 0
offset_left = 25.0
offset_top = 256.0
offset_right = 232.0
offset_bottom = 280.0
theme_override_styles/fill = SubResource("StyleBoxFlat_efi8x")
value = 50.0
show_percentage = false

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling4"]
layout_mode = 0
offset_left = 25.0
offset_top = 280.0
offset_right = 232.0
offset_bottom = 296.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kbnnx")
value = 50.0
show_percentage = false

[node name="Artling5" type="TextureButton" parent="CanvasLayer/Party/Artlings"]
layout_mode = 0
offset_left = 464.0
offset_top = 352.0
offset_right = 720.0
offset_bottom = 608.0
scale = Vector2(0.88, 0.88)
texture_normal = ExtResource("4_efi8x")
ignore_texture_size = true
stretch_mode = 0

[node name="Name" type="Label" parent="CanvasLayer/Party/Artlings/Artling5"]
layout_mode = 0
offset_top = -14.0
offset_right = 256.0
offset_bottom = 10.0
text = "NAME - LEVEL"
label_settings = ExtResource("5_efi8x")
horizontal_alignment = 1

[node name="HpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling5"]
layout_mode = 0
offset_left = 25.0
offset_top = 256.0
offset_right = 232.0
offset_bottom = 280.0
theme_override_styles/fill = SubResource("StyleBoxFlat_efi8x")
value = 50.0
show_percentage = false

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling5"]
layout_mode = 0
offset_left = 25.0
offset_top = 280.0
offset_right = 232.0
offset_bottom = 296.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kbnnx")
value = 50.0
show_percentage = false

[node name="Artling6" type="TextureButton" parent="CanvasLayer/Party/Artlings"]
layout_mode = 0
offset_left = 816.0
offset_top = 352.0
offset_right = 1072.0
offset_bottom = 608.0
scale = Vector2(0.88, 0.88)
texture_normal = ExtResource("4_efi8x")
ignore_texture_size = true
stretch_mode = 0

[node name="Name" type="Label" parent="CanvasLayer/Party/Artlings/Artling6"]
layout_mode = 0
offset_top = -14.0
offset_right = 256.0
offset_bottom = 10.0
text = "NAME - LEVEL"
label_settings = ExtResource("5_efi8x")
horizontal_alignment = 1

[node name="HpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling6"]
layout_mode = 0
offset_left = 25.0
offset_top = 256.0
offset_right = 232.0
offset_bottom = 280.0
theme_override_styles/fill = SubResource("StyleBoxFlat_efi8x")
value = 50.0
show_percentage = false

[node name="ExpBar" type="ProgressBar" parent="CanvasLayer/Party/Artlings/Artling6"]
layout_mode = 0
offset_left = 25.0
offset_top = 280.0
offset_right = 232.0
offset_bottom = 296.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kbnnx")
value = 50.0
show_percentage = false

[node name="BattleDescBox" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(809.875, 561.688)
scale = Vector2(0.917876, 0.854064)
texture = ExtResource("7_r5ah5")

[node name="BattleDesc" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = 179.0
offset_right = 485.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
text = "Line 1
Line 2
Line 3
Line 4"
label_settings = SubResource("LabelSettings_ksy4f")

[node name="ProgLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 1076.0
offset_top = 585.0
offset_right = 1100.0
offset_bottom = 613.0
text = "v"
label_settings = SubResource("LabelSettings_efi8x")
script = ExtResource("6_kbnnx")

[node name="AutoplayButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 1070.0
offset_top = 459.0
offset_right = 1140.0
offset_bottom = 542.0
toggle_mode = true
texture_normal = ExtResource("8_4uhy2")
texture_pressed = ExtResource("9_4uhy2")
stretch_mode = 0

[node name="TurnTimer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/MoveOptions/Move1" to="." method="_on_move_1_pressed"]
[connection signal="pressed" from="CanvasLayer/MoveOptions/Move2" to="." method="_on_move_2_pressed"]
[connection signal="pressed" from="CanvasLayer/MoveOptions/Move3" to="." method="_on_move_3_pressed"]
[connection signal="pressed" from="CanvasLayer/MoveOptions/Move4" to="." method="_on_move_4_pressed"]
[connection signal="pressed" from="CanvasLayer/ChangeArtling" to="." method="_on_change_artling_pressed"]
[connection signal="pressed" from="CanvasLayer/Party/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Party/Artlings/Artling1" to="." method="_on_artling_1_pressed"]
[connection signal="pressed" from="CanvasLayer/Party/Artlings/Artling2" to="." method="_on_artling_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Party/Artlings/Artling3" to="." method="_on_artling_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Party/Artlings/Artling4" to="." method="_on_artling_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Party/Artlings/Artling5" to="." method="_on_artling_5_pressed"]
[connection signal="pressed" from="CanvasLayer/Party/Artlings/Artling6" to="." method="_on_artling_6_pressed"]
[connection signal="pressed" from="CanvasLayer/AutoplayButton" to="." method="_on_autoplay_button_pressed"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
